samples/_failures_safe/1761308075_200ba4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3863a5c3.c: In function ‘main’:
./samples/SAFE/__tmp_3863a5c3.c:176:9: error: expected declaration or statement at end of input
  176 |         }
      |         ^
./samples/SAFE/__tmp_3863a5c3.c:176:9: error: expected declaration or statement at end of input
